5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4072/executions/1578_1333.log
== SUBMITION (2019-03-16 14:43:40) 
-- CODE:
expressao = "30 – 3 ** 2 + 8 // 3 ** 2 * 10"
print(expressão)
-- EXECUTION TIME:
0.139732
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1333/main.py", line 2, in <module>
    print(express\xe3o)
NameError: name 'express\xe3o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:43:57) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressão)
-- EXECUTION TIME:
0.159871
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:44:12) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print=(expressão)
-- EXECUTION TIME:
0.199387
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:44:15) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print=(expressão)
-- EXECUTION TIME:
0.129794
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:44:41) 
-- CODE:
expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.224982
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao =30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:44:57) 
-- CODE:
expressao=30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.172094
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao=30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                 ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:47:42) 
-- CODE:
expressao='30 – 3 ** 2 + 8 // 3 ** 2 * 10'
print(expressao)
-- OUTPUT:
30 – 3 ** 2 + 8 // 3 ** 2 * 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:48:13) 
-- CODE:
expressao= 30 – 3 ** 2 + 8 // 3 ** 2 * 10

print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao= 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:03:33) 
-- CODE:
expressao= 30 - 3 ** 2 + 8 // 3 ** 2 * 10

print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:03:43) 
-- CODE:
expressao= 30 - 3 ** 2 + 8 // 3 ** 2 * 10

print(expressao)
-- EXECUTION TIME:
0.155424
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
